change image / random key

--- a/src/main/resources/templates/trang_chu.html
+++ b/src/main/resources/templates/trang_chu.html
@@ -26,10 +26,16 @@
                 <div class="form-group">
                     <input type="text" class="form-control" id="id-key" placeholder="Enter key"/>
                 </div>
+
+                <div class="form-group">
+                    <button class="btn btn-success" id="btn-random-key">Random Key</button>
+                </div>
+
                 <div class="form-group">
                     <label for="id-input-file">Choose file image:</label>
                     <input type="file" class="form-control-file" id="id-input-file">
                 </div>
+
             </div>
             <div class="col-6">
                 <label>Option: </label>
